# zmq_protobuf_middleware

./: CMakeLists.txt  README.md  protobufhelpers.hpp  utils.h
client-server/: CMakeLists.txt  client.cpp  server.cpp
messages/: Status.proto  Sum.proto  Temperature.proto
publisher-subscriber/: CMakeLists.txt  multi-subscriber.cpp  publisher.cpp  subscriber.cpp
